fix gambar bleeding di index.html dan detail.html

--- a/public/style.css
+++ b/public/style.css
@@ -111,9 +111,9 @@ body {
     /* dari backend: style="width: 110px; height: 90px;" */
     border-radius: 25px;
     object-fit: cover;
-    width: 146px;
-    height: 120px;
-    padding: 10px;
+    width: 100%;
+    min-height: 100px;
+    padding: 0;
 }
 
 .carousel {
@@ -700,7 +700,10 @@ input[type="radio"] + .star-1:hover ~ .star:after {
     width: 75%;
     border-radius: 10px;
     box-shadow: 0px 15px 30px rgba(7, 5, 90, 0.1);
-    max-width: 450px; /* supaya tidak bleed ke bawah ketika layar besar */
+    max-height: 250px; /* supaya tidak bleed ke bawah ketika layar besar */
+    max-width: 400px; /* supaya tidak bleed ke bawah ketika layar besar */
+    object-fit: cover;
+    overflow: hidden;
     /* floating */
     position: absolute;
     z-index: 1;
